tests/integration/snapshots/integration__integration__bits_2_bits__msg12_furibug.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 12
#pragma mapfile "map/any.msgm"

meta {table: {0: {script: "script0", flags: 256}}}


script script0 {
    textAdd("|4,9,abcdefghijklmn");
    textAdd("ABCD_EFGHIJK");
    textAdd("ABCD_EFGHIJK");
}

