tests/integration/snapshots/integration__integration__bits_2_bits__std08_empty_script.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 8
#pragma mapfile "map/any.stdm"

meta {
    unknown: 0,
    stage_name: "dm",
    bgm: [
        {path: "bgm/th08_08.mid", name: "dm"},
        {path: "bgm/th08_09.mid", name: "dm"},
        {path: " ", name: " "},
        {path: " ", name: " "},
    ],
    objects: {},
    instances: [],
}


script main {
}

