tests/integration/snapshots/integration__integration__bits_2_bits__std08_instance_order.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 8
#pragma mapfile "map/any.stdm"

meta {
    unknown: 0,
    stage_name: "dm",
    bgm: [
        {path: "bgm/th08_08.mid", name: "dm"},
        {path: "bgm/th08_09.mid", name: "dm"},
        {path: " ", name: " "},
        {path: " ", name: " "},
    ],
    objects: {
        object0: {
            layer: 0,
            pos: [-320.0, -128.0, -12.0],
            size: [768.0, 384.0, 0.0],
            quads: [
                rect {
                    anm_script: 0,
                    pos: [-64.0, 0.0, -12.0],
                    size: [512.0, 256.0],
                },
            ],
        },
        object1: {
            layer: 1,
            pos: [-81.602196, -140.91132, -425.6022],
            size: [531.2044, 505.268, 571.2044],
            quads: [
                rect {
                    anm_script: 2,
                    pos: [64.0, 224.0, -64.0],
                    size: [112.0, 96.0],
                },
            ],
        },
    },
    instances: [
        object0 {pos: [-192.0, 6600.0, 0.0]},
        object1 {pos: [320.0, 4296.0, 0.0]},
        object0 {pos: [-192.0, 6344.0, 0.0]},
        object0 {pos: [320.0, 4296.0, 0.0]},
    ],
}


script main {
    posKeyframe(0.0, 0.0, 0.0);
}

